<resources>
    <string name="app_name">Validation</string>
    <string name="enter_name">Enter Name…</string>
    <string name="submit">Submit</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re Enter Password</string>
</resources>